--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,17 +1,14 @@
 /* styles.css*/
-html /*{   height: 100%;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-}*/
+html {
+    font-family: Arial, Helvetica, sans-serif
+}
 
 header {
     font-family: Georgia, 'Times New Roman', Times, serif;
     width: 100%;
     height: 90px;
     background-color:#ffffff;  
-    
-}
+    }
 .topmenu {
     display: flex;
     justify-content: space-between;
@@ -24,6 +21,10 @@ header {
     padding: 30px;
     font-size: 26px;
     font-weight: bold;
+    
+}
+.full-width {
+    width: 100%;
 }
 .containermenu{
     display: flex;
@@ -37,12 +38,13 @@ padding: 0 12px 0 12px;
 border-right: 1px solid black; 
 }
 .page_me {
-display: flex;
-justify-content: space-evenly;
-font-style: italic;
-padding: 0 0 0 10px;
-
+    display: flex;
+    justify-content: space-evenly;
+    font-style: italic;
+    padding: 0 0 0 10px;
+    
 }
+/*Containers on header end */
 
     body {
         background-image: url(../images/white-waves.png);
@@ -59,6 +61,9 @@ padding: 0 0 0 10px;
     margin-bottom: 15px;
     border: 3px black;
 }
+.me {
+    color: #4aaaa5
+}
 div.img{
     float: left;
     border: 3px black;
@@ -72,6 +77,7 @@ div.img{
     border:5px solid black;     
 }
 
+/*footer settings, don't touch future Dave*/
 footer {
     position: absolute;
     right: 0;
@@ -83,7 +89,7 @@ footer {
     height: 60px;
     font-size: 23px;
     font-weight: bold;
-  }
-#footer_id {
-    margin: 45px
+    border-top: 8px solid #4aaaa5;
+    
+    
 }
